[package]
name = "github-brush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.15.12", features = ["use_glib", "freetype", "png"] }
chrono = "0.4.19"
error-chain = "0.12.4"
regex = "1.6.0"
